name:                focusing
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- main-is:             Main.hs
  exposed-modules: Data.Plur, Focusing, Focusing.Examples
  build-depends:       base >=4.10 && <4.11, text, containers, lens, monad-gen, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : test.hs
  build-depends    : base, focusing, easytest
  default-language : Haskell2010
